--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         chocolateRains.appendChild(newHeart);
       }
     </script>
-    <script  src="src/valentine.js"></script>
+    <script type="module" src="src/valentine.js"></script>
   </div>
 </body>
 </html>
